apps/transmission/overlays/nishir/svc.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-tracker
  namespace: shikanime
  annotations:
    tailscale.com/hostname: transmission-tracker
    tailscale.com/tags: tag:transmission
